--- a/config/config.properties
+++ b/config/config.properties
@@ -3,7 +3,7 @@ database.name = postgres
 database.host = localhost
 database.port = 5432
 database.username = postgres
-database.password = webuser
+database.password = Apple8705!
 
 flask.host = 0.0.0.0
 flask.port = 5000
